--- a/buy.html
+++ b/buy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Duck Stamp Vault — Menu</title>
+  <title>Duck Stamp Vault — Buy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="manifest" href="manifest.webmanifest" />
   <meta name="theme-color" content="#0b5c3a" />
@@ -30,21 +30,11 @@
 
     
 <section class="card">
-  <header style="display:flex; align-items:center; gap:12px; margin-bottom:10px">
-    <div style="font-size:26px">🦆</div><div style="font-weight:800; font-size:22px">Duck Stamp Vault</div><span class="chip">Main Menu</span>
-  </header>
-  <div class="totals" style="margin-top:-4px; margin-bottom:12px">Choose an option to get started.</div>
-  <div class="row cols-3" style="gap:14px">
-    <a class="btn" style="height:64px; font-size:17px; text-align:center" href="./collection.html">🗂️ View my Collection</a>
-    <a class="btn" style="height:64px; font-size:17px; text-align:center" href="./add.html">➕ Add a stamp</a>
-    <a class="btn" style="height:64px; font-size:17px; text-align:center" href="./value.html">💹 Value my Collection</a>
-  </div>
-  <div class="row cols-3" style="gap:14px; margin-top:12px">
-    <a class="btn secondary" style="height:56px; text-align:center" href="./buy.html">🛒 Buy a Federal Duck Stamp</a>
-    <a class="btn secondary" style="height:56px; text-align:center" href="./about.html">ℹ️ About Us</a>
-    <label class="btn secondary" style="height:56px; display:flex; align-items:center; justify-content:center; gap:8px; cursor:pointer">
-      ⬆️ Import JSON <input type="file" id="importFile" accept="application/json" style="display:none" onchange="importJSON(event)">
-    </label>
+  <h2>Buy a Federal Duck Stamp</h2>
+  <p class="totals">Producer: <b>U.S. Fish & Wildlife Service</b>. Online sales: <b>Amplex Corporation</b> (duckstamp.com). Also at many USPS counters and National Wildlife Refuges.</p>
+  <div class="row cols-2">
+    <a class="btn" href="https://www.duckstamp.com/" target="_blank" rel="noopener">Go to duckstamp.com →</a>
+    <a class="btn secondary" href="https://www.usps.com/shop/duck-stamps.htm" target="_blank" rel="noopener">Buy at USPS →</a>
   </div>
 </section>
 
@@ -52,6 +42,6 @@
 
   </div>
   <script src="./app.js"></script>
-  <script>boot('menu');</script>
+  <script>boot('buy');</script>
 </body>
 </html>
