--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   </header>
   <div class="totals" style="margin-top:-4px; margin-bottom:12px">Choose an option to get started.</div>
   <div class="row cols-3" style="gap:14px">
-    <a class="btn" style="height:64px; font-size:17px; text-align:center" href="./collection.html">🗂️ View my Collection</a>
-    <a class="btn" style="height:64px; font-size:17px; text-align:center" href="./add.html">➕ Add a stamp</a>
-    <a class="btn" style="height:64px; font-size:17px; text-align:center" href="./value.html">💹 Value my Collection</a>
+    <a class="menu-btn" style="height:64px; font-size:17px; text-align:center" href="./collection.html">🗂️ View my Collection</a>
+    <a class="menu-btn" style="height:64px; font-size:17px; text-align:center" href="./add.html">➕ Add a stamp</a>
+    <a class="menu-btn" style="height:64px; font-size:17px; text-align:center" href="./value.html">💹 Value my Collection</a>
   </div>
   <div class="row cols-3" style="gap:14px; margin-top:12px">
-    <a class="btn secondary" style="height:56px; text-align:center" href="./buy.html">🛒 Buy a Federal Duck Stamp</a>
-    <a class="btn secondary" style="height:56px; text-align:center" href="./about.html">ℹ️ About Us</a>
-    <label class="btn secondary" style="height:56px; display:flex; align-items:center; justify-content:center; gap:8px; cursor:pointer">
+    <a class="menu-btn" style="height:56px; text-align:center" href="./buy.html">🛒 Buy a Federal Duck Stamp</a>
+    <a class="menu-btn" style="height:56px; text-align:center" href="./about.html">ℹ️ About Us</a>
+    <label class="menu-btn" style="height:56px; display:flex; align-items:center; justify-content:center; gap:8px; cursor:pointer">
       ⬆️ Import JSON <input type="file" id="importFile" accept="application/json" style="display:none" onchange="importJSON(event)">
     </label>
   </div>
