--- a/collection.html
+++ b/collection.html
@@ -19,7 +19,12 @@
   </div></div>
   <div class="app">
     <div class="app-header">
-  <div class="brand"><div class="logo">🦆</div><div class="title">Duck Stamp Vault</div><span class="chip">v6.1</span></div>
+  <a class="back-btn" href="./index.html">← Back</a>
+  <div class="spacer"></div>
+  <div class="brand"><div class="logo">🦆</div><div class="title">Duck Stamp Vault</div><span class="chip">v6.3</span></div>
+  <div class="spacer"></div>
+  <button class="icon-btn" onclick="toggleTheme()" title="Theme">🌗</button>
+</div><div class="title">Duck Stamp Vault</div><span class="chip">v6.1</span></div>
   <div class="spacer"></div>
   <a class="nav-btn" href="./index.html" title="Home">🏠</a>
   <a class="nav-btn" href="./collection.html" title="Collection">🗂️</a>
